--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <transition name="fadeDisplay">
       <section class="initDisplay" v-if="searching">
-        <h1 class="title" v-show="!searchString">Find in the Wiki</h1>
+        <h1 class="title" v-show="!searchString">WikiSearch</h1>
         <h1 class="title" v-show="searchString">Find: {{ searchString }}</h1>
         <p class="randomArticle">or just
           <a href="https://en.wikipedia.org/wiki/Special:Random" alt="Random Article" target="_blank">click here</a> to read a random article</p>
